@@ -298,6 +298,7 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
   [ Klaus Ade Johnstad ]
   * New upstream version (4.1.1.0):
     - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.
+    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Wed, 22 Feb 2017 07:13:10 +0100
 
